# UwULLM

./: .gitignore  README.md  pyproject.toml
config/arch/: NanoLLaMA-200m.json  NanoLLaMA-25m.json  NanoLLaMA-300m.json  NanoLLaMA-400m.json  NanoLLaMA-500m.json  NanoLLaMA-600m.json
config/ckpt_convert/: tipo-200m.toml  tipo-500m.toml  titpop-200m.toml
config/model/: nanollama-200m.yaml  tinyllama.yaml  tipo-100m.yaml  tipo-200m.yaml  tipo-25m.yaml  tipo-500m.yaml  titpop-200m.yaml  titpop-500m.yaml
config/train/: demo_train.toml  tipo-100m.toml  tipo-200m.toml  tipo-25m.toml  tipo-500m.toml  titpop-200m.toml  titpop-500m.toml
scripts/: convert.py  test_train.py
src/dataset/: PUT YOUR DATASET IMPL HERE
src/dataset/guanaco/: __init__.py  test.json
src/dataset/tipo/: __init__.py
src/uwul/: __init__.py  inference.py  loader.py
src/uwul/data/: base.py
src/uwul/model/: __init__.py
src/uwul/tools/: __init__.py  add_tokens.py
src/uwul/trainer/: optimizers.py  trainer.py
src/uwul/utils/: __init__.py  callbacks.py  tokenize.py
