[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uwul"
version = "0.1.0"
description = "UwU LLM training codebase."
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch",
    "torchdata", # For stateful dataloader
    "datasets",  # For datasets framework from HF
    "lightning",
    "wandb",  # For Wandb logger
    "transformers",
    "warmup_scheduler",
    "omegaconf",
    "matplotlib",
    "sentencepiece",
    "einops",
]

[project.optional-dependencies]


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
